--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -93,4 +93,16 @@
         <url-pattern>/maps</url-pattern>
     </servlet-mapping>
 
+    <!--welcome-->
+
+    <servlet>
+        <servlet-name>welcome</servlet-name>
+        <servlet-class>webapp.welcome</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>welcome</servlet-name>
+        <url-pattern>/welcome</url-pattern>
+    </servlet-mapping>
+
 </web-app>
