turn into .html and add orderHistory templates

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -105,4 +105,16 @@
         <url-pattern>/welcome</url-pattern>
     </servlet-mapping>
 
+    <!--logout-->
+
+    <servlet>
+        <servlet-name>logout</servlet-name>
+        <servlet-class>webapp.logout</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
 </web-app>
