--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -63,12 +63,12 @@
     <!--Order-->
     
     <servlet>
-        <servlet-name>order</servlet-name>
+        <servlet-name>orderForm</servlet-name>
         <servlet-class>webapp.order</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>order</servlet-name>
-        <url-pattern>/order</url-pattern>
+        <servlet-name>orderForm</servlet-name>
+        <url-pattern>/orderForm</url-pattern>
     </servlet-mapping>
 
     <!--received-->
@@ -128,7 +128,15 @@
         <servlet-name>History</servlet-name>
         <url-pattern>/orderHistory</url-pattern>
     </servlet-mapping>
-
-
     
+    <!--profile-->
+    <servlet>
+        <servlet-name>profile</servlet-name>
+        <servlet-class>webapp.profile</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>profile</servlet-name>
+        <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
 </web-app>
